<resources>
    <string name="app_name">JCPenney-Test</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="random_num">0</string>
    <string name="point">Score</string>
    <string name="gained_point">1 / 10</string>
    <string name="select_num">X</string>
    <string name="label">Find above number match in grid</string>
</resources>
